# Data_Pipeline

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: dag_extract_raw_to_bronze_dp_clients.py  dag_test.py
etl/: __init__.py  extract_contracts.py  extract_csv_data.py
etl/data/: fake_clients.csv
etl/data/raw_tables/: dp_clients.py
scripts/: generate_fernet_key.py
slack/: data_pipeline_slack_bot.py
spark/: spark-defaults.conf
