[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
apache-airflow = "^2.3.0"
pyspark = "^3.1.2"
black = "^24.4.2"
boto3 = "^1.34.113"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

